--- a/portfolio-house rent.html
+++ b/portfolio-house rent.html
@@ -65,7 +65,7 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Forecasting</li>
+            <li class="current">Data Scientific</li>
           </ol>
         </nav>
         <h1>House Rent Prediction--ML</h1>
@@ -142,7 +142,7 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>Forecasting</li>
+                <li><strong>Category</strong>Data Scientific</li>
                 <li><strong>Source</strong> Github</li>
                 <li><strong>Project date</strong> 05 January, 2024</li>
                 <li><a href="https://github.com/ariefprasetyohadi/Business-Analytics/blob/main/House_rent/house-rent-prediction-analysis-ml.ipynb" target="_blank" class="btn-visit align-self-start">View Project</a></li>
