--- a/portfolio-supermarket.html
+++ b/portfolio-supermarket.html
@@ -65,7 +65,7 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Business Analysis</li>
+            <li class="current">Data Mining</li>
           </ol>
         </nav>
         <h1>Supermarket--EDA</h1>
@@ -141,7 +141,7 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>Business Analysis</li>
+                <li><strong>Category</strong>Data Mining</li>
                 <li><strong>Source</strong>Github</li>
                 <li><strong>Project date</strong> 05 January, 2024</li>
                 <li><a href="https://github.com/ariefprasetyohadi/Supermarket-EDA/blob/main/Supermarket-eda.ipynb" target="_blank" class="btn-visit align-self-start">View Project</a></li>
