--- a/portfolio-Image Prediction.html
+++ b/portfolio-Image Prediction.html
@@ -65,7 +65,7 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Data Scientific/li>
+            <li class="current">Data Scientific</li>
           </ol>
         </nav>
         <h1>Image Prediction, Game : Scissor, Papper & Rock</h1>
