--- a/portfolio-car price.html
+++ b/portfolio-car price.html
@@ -65,7 +65,7 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Business Analysis</li>
+            <li class="current">Data Mining</li>
           </ol>
         </nav>
         <h1>Car price--EDA</h1>
@@ -146,7 +146,7 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>Business Analysis</li>
+                <li><strong>Category</strong>Data Mining</li>
                 <li><strong>Source</strong> Github</li>
                 <li><strong>Project date</strong> 05 January, 2024</li>
                 <li><a href="https://github.com/ariefprasetyohadi/Data-Analyst-Project/blob/main/car-price-prediction-eda-ml.ipynb" target="_blank" class="btn-visit align-self-start">View Project</a></li>
