--- a/portfolio-tour and travel churn.html
+++ b/portfolio-tour and travel churn.html
@@ -65,10 +65,10 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Forecasting</li>
+            <li class="current">Data Scientific</li>
           </ol>
         </nav>
-        <h1>Transportation Churn--ML</h1>
+        <h1>Tour and travel churn--ML</h1>
       </div>
     </div><!-- End Page Title -->
 
@@ -143,7 +143,7 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>Forecasting</li>
+                <li><strong>Category</strong>Data Scientific</li>
                 <li><strong>Source</strong>Github</li>
                 <li><strong>Project date</strong> 05 January, 2024</li>
                 <li><a href="https://github.com/ariefprasetyohadi/data-portfolio/tree/main/transportation_churn" target="_blank" class="btn-visit align-self-start">View Project</a></li>
