--- a/portfolio-Image Prediction.html
+++ b/portfolio-Image Prediction.html
@@ -100,7 +100,7 @@
           <div class="mg-fluid align-items-center">
 
             <div class="img-fluid">
-              <img src="assets/img/masonry-portfolio/scissors, papper and rock.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/scissors, papper and rock.jpg" width="1200" height="900" alt="">
             </div>
 
           </div>
