--- a/portfolio-weather in seattle.html
+++ b/portfolio-weather in seattle.html
@@ -100,19 +100,19 @@
           <div class="swiper-wrapper align-items-center">
 
             <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/seattle weather.png" alt="">
+              <img src="assets/img/masonry-portfolio/seattle weather.png" width="1200" height="900" alt="">
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/Retail sales.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/Retail sales.jpg" width="1200" height="900" alt="">
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/corona virus.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/corona virus.jpg" width="1200" height="900" alt="">
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/sales-db.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/sales-db.jpg" width="1200" height="900" alt="">
             </div>
 
           </div>
