--- a/portfolio-house rent.html
+++ b/portfolio-house rent.html
@@ -100,15 +100,15 @@
           <div class="swiper-wrapper align-items-center">
 
             <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/House Rent.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/House Rent.jpg" width="1200" height="900" alt="">
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/Transportation churn.jpg" alt="">
+              <img src="assets/img/masonry-portfolio/Transportation churn.jpg" width="1200" height="900" alt="">
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/Air passanger satification.jpeg" alt="">
+              <img src="assets/img/masonry-portfolio/Air passanger satification.jpeg" width="1200" height="900" alt="">
             </div>
 
           </div>
