--- a/portfolio-Image Prediction.html
+++ b/portfolio-Image Prediction.html
@@ -103,6 +103,22 @@
               <img src="assets/img/masonry-portfolio/scissors, papper and rock.jpg" width="1280" height="720" alt="">
             </div>
 
+            <div class="swiper-slide">
+              <img src="assets/img/capture-project/ss-imp-1.png" width="1280" height="720" alt="">
+            </div>
+
+            <div class="swiper-slide">
+              <img src="assets/img/capture-project/ss-imp2-2.png" width="1280" height="720" alt="">
+            </div>
+
+            <div class="swiper-slide">
+              <img src="assets/img/capture-project/ss-imp-3.png" width="1280" height="720" alt="">
+            </div>
+
+            <div class="swiper-slide">
+              <img src="assets/img/capture-project/ss-imp-4.png" width="1280" height="720" alt="">
+            </div>
+
           </div>
           <div class="swiper-button-prev"></div>
           <div class="swiper-button-next"></div>
@@ -119,11 +135,22 @@
               </p>
 
               <div class="testimonial-item">
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.</span>
-                  <i class="bi bi-quote quote-icon-right"></i>
-                </p>
+                <p class="flex text-sm text-gray-600 sm:mt-12 mt-8 mb-2 font-mono">Related Skills :</p>
+
+                <button
+                    class="px-2.5 py-1 rounded-full text-sm font-sm bg-ds_blue_light text-ds_blue ring- mr-1 mb-1 cursor-default">
+                    Python</button>
+                
+                <button
+                    class="px-2.5 py-1 rounded-full text-sm font-sm bg-ds_blue_light text-ds_blue ring- mr-1 mb-1 cursor-default">
+                     SQL</button>
+
+                <button
+                     class="px-2.5 py-1 rounded-full text-sm font-sm bg-ds_blue_light text-ds_blue ring- mr-1 mb-1 cursor-default">
+                      Modelling</button>
+                <button
+                      class="px-2.5 py-1 rounded-full text-sm font-sm bg-ds_blue_light text-ds_blue ring- mr-1 mb-1 cursor-default">
+                       Deep Learning</button>
               </div>
 
             </div>
