--- a/portfolio-retail sales.html
+++ b/portfolio-retail sales.html
@@ -104,15 +104,7 @@
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/corona virus.jpg" width="1200" height="900" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/sales-db.jpg" width="1200" height="900" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/seattle weather.png" width="1280" height="720" alt="">
+              <img src="assets/img/capture-project/ss-db-rt.png" width="1280" height="720" alt="">
             </div>
 
           </div>
@@ -131,10 +123,19 @@
               </p>
 
               <div class="testimonial-item">
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.</span>
-                  <i class="bi bi-quote quote-icon-right"></i>
+                <p class="flex text-sm text-gray-600 sm:mt-12 mt-8 mb-2 font-mono">Related Skills :</p>
+
+                <button
+                    class="px-2.5 py-1 rounded-full text-sm font-sm bg-ds_blue_light text-ds_blue ring- mr-1 mb-1 cursor-default">
+                    SQL</button>
+                
+                <button
+                    class="px-2.5 py-1 rounded-full text-sm font-sm bg-ds_blue_light text-ds_blue ring- mr-1 mb-1 cursor-default">
+                     Looker Studio</button>
+
+                <button
+                     class="px-2.5 py-1 rounded-full text-sm font-sm bg-ds_blue_light text-ds_blue ring- mr-1 mb-1 cursor-default">
+                      Visualization</button>
                 </p>
               </div>
             </div>
