--- a/portfolio-tour and travel churn.html
+++ b/portfolio-tour and travel churn.html
@@ -103,12 +103,25 @@
               <img src="assets/img/masonry-portfolio/Transportation churn.jpg" width="1280" height="720" alt="">
             </div>
 
+
             <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/Air passanger satification.jpeg" width="1280" height="720" alt="">
+              <img src="assets/img/capture-project/ss-ttc-1.png" width="1280" height="720" alt="">
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/House Rent.jpg" width="1280" height="720" alt="">
+              <img src="assets/img/capture-project/ss-ttc-2.png" width="1280" height="720" alt="">
+            </div>
+
+            <div class="swiper-slide">
+              <img src="assets/img/capture-project/ss-ttc-3.png" width="1280" height="720" alt="">
+            </div>
+
+            <div class="swiper-slide">
+              <img src="assets/img/capture-project/ss-ttc-4.png" width="1280" height="720" alt="">
+            </div>
+
+            <div class="swiper-slide">
+              <img src="assets/img/capture-project/ss-ttc-5.png" width="1280" height="720" alt="">
             </div>
 
           </div>
@@ -130,11 +143,22 @@
               </p>
 
               <div class="testimonial-item">
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.</span>
-                  <i class="bi bi-quote quote-icon-right"></i>
-                </p>
+                <p class="flex text-sm text-gray-600 sm:mt-12 mt-8 mb-2 font-mono">Related Skills :</p>
+
+                <button
+                    class="px-2.5 py-1 rounded-full text-sm font-sm bg-ds_blue_light text-ds_blue ring- mr-1 mb-1 cursor-default">
+                    Python</button>
+                
+                <button
+                    class="px-2.5 py-1 rounded-full text-sm font-sm bg-ds_blue_light text-ds_blue ring- mr-1 mb-1 cursor-default">
+                     SQL</button>
+
+                <button
+                     class="px-2.5 py-1 rounded-full text-sm font-sm bg-ds_blue_light text-ds_blue ring- mr-1 mb-1 cursor-default">
+                      Regression</button>
+                <button
+                      class="px-2.5 py-1 rounded-full text-sm font-sm bg-ds_blue_light text-ds_blue ring- mr-1 mb-1 cursor-default">
+                       Machine Learning</button>
               </div>
             </div>
           </div>
