--- a/portfolio-weather in seattle.html
+++ b/portfolio-weather in seattle.html
@@ -104,15 +104,7 @@
             </div>
 
             <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/Retail sales.jpg" width="1280" height="720" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/corona virus.jpg" width="1280" height="720" alt="">
-            </div>
-
-            <div class="swiper-slide">
-              <img src="assets/img/masonry-portfolio/sales-db.jpg" width="1280" height="720" alt="">
+              <img src="assets/img/capture-project/ss-db-wth.png" width="1280" height="720" alt="">
             </div>
 
           </div>
@@ -130,13 +122,20 @@
                 This project contains reports and forecasts of weather in Seattle, Washington from 2012 to 2015. The focus of this project is to see how often the intensity of weather changes that occur every year. Which can be seen in the bar charts and pie charts that visualize some of the following weather: sunny, foggy, drizzly, rainy, and snowy weather.
               </p>
 
-
               <div class="testimonial-item">
-                <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.</span>
-                  <i class="bi bi-quote quote-icon-right"></i>
-                </p>
+                <p class="flex text-sm text-gray-600 sm:mt-12 mt-8 mb-2 font-mono">Related Skills :</p>
+
+                <button
+                    class="px-2.5 py-1 rounded-full text-sm font-sm bg-ds_blue_light text-ds_blue ring- mr-1 mb-1 cursor-default">
+                    SQL</button>
+                
+                <button
+                    class="px-2.5 py-1 rounded-full text-sm font-sm bg-ds_blue_light text-ds_blue ring- mr-1 mb-1 cursor-default">
+                     Looker Studio</button>
+
+                <button
+                     class="px-2.5 py-1 rounded-full text-sm font-sm bg-ds_blue_light text-ds_blue ring- mr-1 mb-1 cursor-default">
+                      Visualization</button>
               </div>
             </div>
           </div>
