--- a/portfolio-Image Prediction.html
+++ b/portfolio-Image Prediction.html
@@ -97,9 +97,9 @@
               }
             }
           </script>
-          <div class="mg-fluid align-items-center">
+          <div class="swiper-wrapper align-items-center">
 
-            <div class="img-fluid">
+            <div class="swiper-slide">
               <img src="assets/img/masonry-portfolio/scissors, papper and rock.jpg" width="1280" height="720" alt="">
             </div>
 
